--- a/Oxford_IIIT_Pets_Classification_Using_Deep_Learning.ipynb
+++ b/Oxford_IIIT_Pets_Classification_Using_Deep_Learning.ipynb
@@ -605,6 +605,18 @@
         "            plt.title(f\"Grad-CAM for Class {class_idx}\")\n",
         "            plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grad-CAM visualization\n",
+        "grad_cam_visualization(model, test_loader)"
+      ],
+      "metadata": {
+        "id": "jBIhWZAE8XGZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -614,11 +626,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
